34. kubernetes ingress service/basic_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: simple-dotnet.example.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: simple-dotnet-service
            port: 
              number: 80

  - host: order.foodpanda.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:  
          service:
            name: order-service
            port: 
              number: 80
